Filtering and sorting of products

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^2.2.0",
+        "lodash": "^4.17.21",
         "pinia": "^3.0.4",
         "pinia-plugin-persistedstate": "^4.7.1"
     }
